--- a/index.html
+++ b/index.html
@@ -5,30 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPLITTER</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <h1>
-        SPLITTER
+        SPLI
+        <br>
+        TTER
     </h1>
     <main>
 
         <section class="tipInput">
             <div>
-                <label for="quantity">Amount</label>
+                <h2>Bill</h2>
+                <label for="quantity"></label>
                 <input type="number">
+                
             </div>
             <div>
                 <h2>Select Tip %</h2>
-                <button>5%</button>
-                <button>10%</button>
-                <button>15%</button>
-                <button>25%</button>
-                <button>50%</button>
-                <input type="number">
+                <button class="button">5%</button>
+                <button class="button">10%</button>
+                <button class="button">15%</button>
+                <button class="button">25%</button>
+                <button class="button">50%</button>
+                <input  class="button"type="number">
             </div>
-            <div>
+            <div class="people">
                 <h2>Number of people</h2>
                 <input type="number">
+                <i class="fas fa-user-tie"></i>
             </div>
         </section>
         <section class="tipResult">
@@ -40,17 +51,20 @@
                 <p>
                 </p>
             </div>
+            <div>
+                <div>
+                    <h2>Total</h2>
+                    <p>/person</p>
+                </div>
+                <div>
+                    <p>
+                    </p>
+                </div>
+            </div> 
+
+            <button class="reset">RESET</button>
         </section>
-        <div>
-            <div>
-                <h2>Total</h2>
-                <p>/person</p>
-            </div>
-            <div>
-                <p>
-                </p>
-            </div>
-        </div> 
+        
     </main>
 </body>
 </html>
